[package]
name = "affiliate-contracts"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
# List of features provided by this package. use to check that all features are building 
# cargo build --features all
all = []

[dependencies]

serde = { version = "*", features = ["derive"] }
serde_json = "*"
